Fixed: Plugin did not shutdown jobs when the plugin is stopped Fixed: Character offset converter fix (used to highlight the current statement) Fixed: Change input term before invoke the top strategy
svn path=/spoofax-imp/trunk/org.strategoxt.imp.debug.core/; revision=22491